# cc-cedict-parser-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/: Cargo.toml
examples/src/: basic.rs  main.rs  rich.rs
src/: entry.rs  head.rs  lib.rs  reader.rs
src/definition/: classifier.rs  mod.rs  reference.rs  tag.rs
src/sense/: mod.rs  models.rs  parser.rs  qualifier.rs  reference.rs  tag.rs
